[package]
name = "libnet-rs"
version = "0.1.3"
authors = ["Rémi Oudin <oudin@crans.org>"]
build = "build.rs"
license= "GPLv3"
description = "A quick binding of libnet for Rust"
readme = "README.md"
homepage = "https://github.com/Gu1nness/libnet-rs"

[dependencies]
libc = "0.2.43"

[build-dependencies]
pkg-config = "0.3.14"
